Add latest changes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,38 +5,30 @@
 				<div class="flex flex-wrap mx-[-12px]">
 					<div class="xl:w-3/12 lg:w-3/12 w-full flex-[0_0_auto] px-[12px] max-w-full footer-intro mb-10 ">
 						<div class="logo"><a href="index.html"><img src="images/logo.svg" class="xsm:h-auto h-12 w-auto xsm:w-full" alt="" width="95"></a></div>
-						<a href="#" class="email tran3s text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] leading-[1.67em] mt-[35px] mb-[15px] md:mt-[10px] sm:mt-[10px] xsm:mt-[10px] hover:underline hover:text-black">januinc@company.com</a> <br>
-						<a href="#" class="mobile tran3s text-[20px] lg:text-[18px] md:text-[18px] sm:text-[18px] xsm:text-[18px] font-medium text-[#BC46E2] hover:underline">+757 699-4478</a>
+						<a href="https://x.com/Design2Tailwind" class="email tran3s text-[18px] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] leading-[1.67em] mt-[35px] mb-[15px] md:mt-[10px] sm:mt-[10px] xsm:mt-[10px] hover:underline hover:text-black">hello@design2tailwind.com</a> <br>
+						<a href="#" class=""><img src="images/lazy.svg" data-src="images/icon/icon-twitter.svg" alt="" class="lazy-img h-9"></a>
 					</div>
-					<div class="xl:w-3/12 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full !ml-auto mb-[30px]">
+					<div class="xl:w-1/5 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full !ml-auto mb-[30px]">
 						<h5 class="font-Recoleta footer-title text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Links</h5>
 						<ul class="footer-nav-link mb-0 pl-0 list-none ">
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="index.html">Home</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="pricing.html">Pricing</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="about-v1.html">About us</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="blog-v1.html">Careers</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="service-v1.html">Features</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="blog-v1.html">Demo the product</a></li>
+							<li><a  href="/" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="index.html">Home</a></li>
+							<li><a  href="/pricing" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="pricing.html">Pricing</a></li>
+							<li><a  href="/about" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="about-v1.html">About us</a></li>
+							<li><a  href="/blog" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="blog-v1.html">Blog</a></li>
 						</ul>
 					</div>
-					<div class="xl:w-3/12 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full mb-[30px]">
+					<div class="xl:w-1/4 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full mb-[30px]">
+						<h5 class="footer-title font-Recoleta text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Services</h5>
+						<ul class="footer-nav-link mb-0 pl-0 list-none ">
+							<li><a  href="/figma-to-tailwind" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="blog-details.html">Figma to Tailwind CSS</a></li>
+							<li><a href="/for-agencies" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="blog-details.html">For agencies</a></li>
+						</ul>
+					</div>
+					<div class="xl:w-1/5 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full mb-[30px]">
 						<h5 class="footer-title font-Recoleta text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Legal</h5>
 						<ul class="footer-nav-link mb-0 pl-0 list-none ">
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="faq.html">Terms of use</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="faq.html">Terms & conditions</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="faq.html">Privacy policy</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="faq.html">Cookie policy</a></li>
-						</ul>
-					</div>
-					<div class="xl:w-2/12 lg:w-3/12 md:w-4/12 sm:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full mb-[30px]">
-						<h5 class="footer-title font-Recoleta text-black font-medium text-[24px] mb-5 md:text-[20px] md:mb-[10px] sm:text-[20px] sm:mb-[10px] xsm:text-[20px] xsm:mb-[10px]">Products</h5>
-						<ul class="footer-nav-link mb-0 pl-0 list-none ">
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="blog-details.html">Take the tour</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="blog-details.html">Live chat</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="blog-details.html">Self-service</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="blog-details.html">Social</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="blog-details.html">Collaboration</a></li>
-							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[color:var(--prime-two)] hover:underline" href="blog-details.html">Jano Reviews</a></li>
+							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="faq.html">Terms & conditions</a></li>
+							<li><a class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="faq.html">Privacy policy</a></li>
 						</ul>
 					</div>
 				</div>
@@ -50,22 +42,9 @@
 	<div class="bottom-footer relative z-[2] p-[40px_0_25px] md:p-[20px_0_0] sm:p-[20px_0_0] xsm:p-[20px_0_0]">
 		<div class="container">
 			<div class="inner-wrapper m-auto">
-				<div class="flex flex-wrap mx-[-12px]">
-					<div class="xl:w-4/12 lg:w-4/12 md:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full xl:order-none lg:order-none mb-[15px]">
-						<ul class="flex justify-center xl:justify-start lg:justify-start footer-nav mb-0 pl-0 list-none ">
-							<li><a class=" text-[15px] font-medium text-black mr-[22px] hover:underline md:m-[0_10px] sm:m-[0_10px] xsm:m-[0_10px]" href="faq.html">Privacy &amp; Terms.</a></li>
-							<li><a class=" text-[15px] font-medium text-black mr-[22px] hover:underline md:m-[0_10px] sm:m-[0_10px] xsm:m-[0_10px]" href="contact-us.html">Contact Us</a></li>
-						</ul>
-					</div>
-					<div class="xl:w-4/12 lg:w-4/12 md:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full xl:order-2 lg:order-2 mb-[15px]">
-						<ul class="flex justify-center xl:justify-end lg:justify-end social-icon mb-0 pl-0 list-none ">
-							<li><a class=" text-[19px] text-[#333333] transition-all duration-[0.3s] ease-[ease-in-out] ml-[19px] hover:text-[color:var(--prime-two)] md:m-[0_10px] sm:m-[0_10px] xsm:m-[0_10px]" href="#"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a class=" text-[19px] text-[#333333] transition-all duration-[0.3s] ease-[ease-in-out] ml-[19px] hover:text-[color:var(--prime-two)] md:m-[0_10px] sm:m-[0_10px] xsm:m-[0_10px]" href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a class=" text-[19px] text-[#333333] transition-all duration-[0.3s] ease-[ease-in-out] ml-[19px] hover:text-[color:var(--prime-two)] md:m-[0_10px] sm:m-[0_10px] xsm:m-[0_10px]" href="#"><i class="fab fa-linkedin-in"></i></a></li>
-						</ul>
-					</div>
-					<div class="xl:w-4/12 lg:w-4/12 md:w-4/12 w-full flex-[0_0_auto] px-[12px] max-w-full xl:order-1 lg:order-1 mb-[15px]">
-						<p class="copyright text-center !m-0 text-[15px]">Copyright @2023 janu inc.</p>
+				<div class="flex justify-center text-center">
+					<div class="mb-[15px]">
+						<p class="copyright text-center !m-0 text-[15px]">Copyright @2025 Design2Tailwind.</p>
 					</div>
 				</div>
 			</div> <!-- /.inner-wrapper -->
