--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@
 
 			<div class="right-widget  flex items-center xl:order-3 lg:order-3">
 				<!-- <a href="signin.html" class="login-btn-one text-[17px] lg:text-[15px] md:text-[15px] sm:text-[15px] xsm:text-[15px] font-medium tran3s mr-[1rem] leading-[48px] border text-black p-[0_35px] rounded-[30px] border-solid border-[#E4E4E4] hover:text-white hover:bg-[#BC46E2] lg:p-[0_25px] lg:leading-[45px] md:p-[0_25px] md:leading-[45px] sm:p-[0_25px] sm:leading-[45px] xsm:p-[0_25px] xsm:leading-[45px]">Login</a> -->
-				<a href="contact-us.html" class="contact-btn-two text-[17px] lg:text-[15px] md:text-[15px] sm:text-[15px] xsm:text-[15px] font-medium tran3s hidden xl:block lg:block leading-[48px] border border-[#BC46E2] text-[#BC46E2] p-[0_35px] rounded-[30px] border-solid hover:text-white hover:bg-[#BC46E2] lg:leading-[45px] lg:p-[0_25px] md:leading-[45px] md:p-[0_25px] sm:leading-[45px] sm:p-[0_25px] xsm:leading-[45px] xsm:p-[0_25px]">Contact us</a>
+				<a href="/#quote" class="contact-btn-two text-[17px] lg:text-[15px] md:text-[15px] sm:text-[15px] xsm:text-[15px] font-medium tran3s hidden xl:block lg:block leading-[48px] border border-[#BC46E2] text-[#BC46E2] p-[0_35px] rounded-[30px] border-solid hover:text-white hover:bg-[#BC46E2] lg:leading-[45px] lg:p-[0_25px] md:leading-[45px] md:p-[0_25px] sm:leading-[45px] sm:p-[0_25px] xsm:leading-[45px] xsm:p-[0_25px]">Get a Quote</a>
 			</div> <!-- /.right-widget -->
 
 			<nav class="navbar navbar-expand-lg md:p-0 sm:p-0 xsm:p-0 flex items-center py-2 xl:flex-nowrap xl:justify-start lg:flex-nowrap lg:justify-start xl:order-2 lg:order-2 static flex-wrap justify-between">
@@ -19,23 +19,29 @@
 				<ul class="navbar-nav xl:flex-row lg:flex-row flex flex-col mb-0 pl-0">
 					<li class="block xl:hidden lg:hidden">
 							<div class="flex items-center mb-12">
-								<a href="index.html" class="block"><img src="images/logo.svg" class="w-auto h-8" alt=""></a>
+								<a href="/" class="block"><img src="images/logo.svg" class="w-auto h-8" alt=""></a>
 							</div>
 						</li>
-					<li class="nav-item dropdown static md:relative sm:relative xsm:relative mega-dropdown active group">
-						<a class="nav-link visible block font-medium text-[18px] lg:text-[17px] leading-[initial] !text-[#BC46E2] relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0] after:content-['\f282'] after:text-[12px] after:font-bold after:absolute after:leading-[56px] after:text-center after:inline-block after:ml-[0.255em] after:border-0 after:right-auto after:top-0 after:font-Bootstrap after:align-[0.255em] md:text-[16px] md:m-0 md:p-[13px_0] sm:text-[16px] sm:m-0 sm:p-[13px_0] xsm:text-[16px] xsm:m-0 xsm:p-[13px_0] dropdown-toggle whitespace-nowrap" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Home</a>
+					<li>
+						<a href="/" class="nav-link visible block font-medium text-[18px] lg:text-[17px] hover:!text-[#BC46E2] text-black relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0]">Home</a>
 				</li>
-				<li class="nav-item dropdown relative mega-dropdown-md group ">
-						<a class="nav-link visible block font-medium text-[18px] hover:!text-[#BC46E2] lg:text-[17px] leading-[initial] text-black relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0] after:content-['\f282'] after:text-[12px] after:font-bold after:absolute after:leading-[56px] after:text-center after:inline-block after:ml-[0.255em] after:border-0 after:right-auto after:top-0 after:font-Bootstrap after:align-[0.255em] md:text-[16px] md:m-0 md:p-[13px_0] sm:text-[16px] sm:m-0 sm:p-[13px_0] xsm:text-[16px] xsm:m-0 xsm:p-[13px_0] dropdown-toggle whitespace-nowrap" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Pages</a>
+				<li class="relative">
+					<a href="#" class="nav-link visible block font-medium hover:!text-[#BC46E2] text-[18px] lg:text-[17px] text-black relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0] ">Services</a>
+					<div class="bg-black w-40 absolute z-[999] top-10">
+						<ul>
+							<li><a  href="/figma-to-tailwind" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="blog-details.html">Figma to Tailwind CSS</a></li>
+							<li><a href="/for-agencies" class=" text-[17px] leading-10 transition-all duration-[0.3s] ease-[ease-in-out] md:text-[16px] md:leading-[38px] sm:text-[16px] sm:leading-[38px] xsm:text-[16px] xsm:leading-[38px] hover:text-[#BC46E2] hover:underline" href="blog-details.html">For agencies</a></li>
+						</ul>
+					</div>
 				</li>
-				<li class="nav-item dropdown relative group">
-						<a class="nav-link visible block font-medium hover:!text-[#BC46E2] text-[18px] lg:text-[17px] leading-[initial] text-black relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0] after:content-['\f282'] after:text-[12px] after:font-bold after:absolute after:leading-[56px] after:text-center after:inline-block after:ml-[0.255em] after:border-0 after:right-auto after:top-0 after:font-Bootstrap after:align-[0.255em] md:text-[16px] md:m-0 md:p-[13px_0] sm:text-[16px] sm:m-0 sm:p-[13px_0] xsm:text-[16px] xsm:m-0 xsm:p-[13px_0] dropdown-toggle whitespace-nowrap" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Portfolio</a>
+				<li>
+					<a href="/pricing" class="nav-link visible block font-medium hover:!text-[#BC46E2] text-[18px] lg:text-[17px] text-black relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0] ">Pricing</a>
 				</li>
-					<li class="nav-item dropdown relative group">
-						<a class="nav-link visible block font-medium hover:!text-[#BC46E2] text-[18px] lg:text-[17px] leading-[initial] text-black relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0] after:content-['\f282'] after:text-[12px] after:font-bold after:absolute after:leading-[56px] after:text-center after:inline-block after:ml-[0.255em] after:border-0 after:right-auto after:top-0 after:font-Bootstrap after:align-[0.255em] md:text-[16px] md:m-0 md:p-[13px_0] sm:text-[16px] sm:m-0 sm:p-[13px_0] xsm:text-[16px] xsm:m-0 xsm:p-[13px_0] dropdown-toggle whitespace-nowrap" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Blog</a>
+				<li>
+					<a href="/about" class="nav-link visible block font-medium hover:!text-[#BC46E2] text-[18px] lg:text-[17px] text-black relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0] ">About</a>
 				</li>
-				<li class="nav-item dropdown relative group">
-						<a class="nav-link visible block font-medium hover:!text-[#BC46E2] text-[18px] lg:text-[17px] leading-[initial] text-black relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0] after:content-['\f282'] after:text-[12px] after:font-bold after:absolute after:leading-[56px] after:text-center after:inline-block after:ml-[0.255em] after:border-0 after:right-auto after:top-0 after:font-Bootstrap after:align-[0.255em] md:text-[16px] md:m-0 md:p-[13px_0] sm:text-[16px] sm:m-0 sm:p-[13px_0] xsm:text-[16px] xsm:m-0 xsm:p-[13px_0] dropdown-toggle whitespace-nowrap" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Contact</a>
+				<li>
+					<a href="/blog" class="nav-link visible block font-medium hover:!text-[#BC46E2] text-[18px] lg:text-[17px] text-black relative transition-all duration-[0.3s] ease-[ease-in-out] m-[0_26px] p-[13px_0] ">Blog</a>
 				</li>
 				</ul>
 				<!-- Mobile Content
