--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -111,17 +111,17 @@ import Footer from '@components/Footer.astro';
 			<div class="card-wrapper  pt-[45px] lg:pt-5 md:pt-5 sm:pt-5 xsm:pt-5 pb-[55px] lg:pb-[30px] md:pb-[30px] sm:pb-[30px] xsm:pb-[30px] mt-[85px] lg:mt-[50px] md:mt-[50px] sm:mt-[50px] xsm:mt-[50px] border-y-2 border-y-black border-solid">
 				<div class="grid md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 justify-center gap-8">
 					<div class="card-style-twentySix text-center wow fadeInUp">
-						<div class="icon rounded-[50%] m-auto flex items-center justify-center w-[75px] h-[75px] bg-black lg:w-[55px] lg:h-[55px] lg:p-[15px] md:w-[55px] md:h-[55px] md:p-[15px] sm:w-[55px] sm:h-[55px] sm:p-[15px] xsm:w-[55px] xsm:h-[55px] xsm:p-[15px]"><img src="images/lazy.svg" data-src="images/icon/icon_175.svg" alt="" class="lazy-img"></div>
+						<div class="icon rounded-[50%] m-auto flex items-center justify-center w-[75px] h-[75px] bg-[#e193b0] lg:w-[55px] lg:h-[55px] lg:p-[15px] md:w-[55px] md:h-[55px] md:p-[15px] sm:w-[55px] sm:h-[55px] sm:p-[15px] xsm:w-[55px] xsm:h-[55px] xsm:p-[15px]"><img src="images/lazy.svg" data-src="images/icon/icon-direction.svg" alt="" class="lazy-img h-10"></div>
 						<h5 class=" text-black mt-10 lg:mt-[30px] md:mt-[30px] sm:mt-[30px] xsm:mt-[30px] mb-[5px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px]">Learn skills with over 120k+</h5>
 						<p class=" text-[18px] leading-[1.67em] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] ">Video courses.</p>
 					</div>
 					<div class="card-style-twentySix text-center wow fadeInUp">
-						<div class="icon rounded-[50%] m-auto flex items-center justify-center w-[75px] h-[75px] bg-black lg:w-[55px] lg:h-[55px] lg:p-[15px] md:w-[55px] md:h-[55px] md:p-[15px] sm:w-[55px] sm:h-[55px] sm:p-[15px] xsm:w-[55px] xsm:h-[55px] xsm:p-[15px]"><img src="images/lazy.svg" data-src="images/icon/icon_175.svg" alt="" class="lazy-img"></div>
+						<div class="icon rounded-[50%] m-auto flex items-center justify-center w-[75px] h-[75px] bg-[#e193b0] lg:w-[55px] lg:h-[55px] lg:p-[15px] md:w-[55px] md:h-[55px] md:p-[15px] sm:w-[55px] sm:h-[55px] sm:p-[15px] xsm:w-[55px] xsm:h-[55px] xsm:p-[15px]"><img src="images/lazy.svg" data-src="images/icon/icon-hand-heart.svg" alt="" class="lazy-img h-10"></div>
 						<h5 class=" text-black mt-10 lg:mt-[30px] md:mt-[30px] sm:mt-[30px] xsm:mt-[30px] mb-[5px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px]">Learn skills with over 120k+</h5>
 						<p class=" text-[18px] leading-[1.67em] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] ">Video courses.</p>
 					</div>
 					<div class="card-style-twentySix text-center wow fadeInUp">
-						<div class="icon rounded-[50%] m-auto flex items-center justify-center w-[75px] h-[75px] bg-black lg:w-[55px] lg:h-[55px] lg:p-[15px] md:w-[55px] md:h-[55px] md:p-[15px] sm:w-[55px] sm:h-[55px] sm:p-[15px] xsm:w-[55px] xsm:h-[55px] xsm:p-[15px]"><img src="images/lazy.svg" data-src="images/icon/icon_175.svg" alt="" class="lazy-img"></div>
+						<div class="icon rounded-[50%] m-auto flex items-center justify-center w-[75px] h-[75px] bg-[#e193b0] lg:w-[55px] lg:h-[55px] lg:p-[15px] md:w-[55px] md:h-[55px] md:p-[15px] sm:w-[55px] sm:h-[55px] sm:p-[15px] xsm:w-[55px] xsm:h-[55px] xsm:p-[15px]"><img src="images/lazy.svg" data-src="images/icon/icon-funds.svg" alt="" class="lazy-img h-10"></div>
 						<h5 class=" text-black mt-10 lg:mt-[30px] md:mt-[30px] sm:mt-[30px] xsm:mt-[30px] mb-[5px] lg:text-[20px] md:text-[20px] sm:text-[20px] xsm:text-[20px]">Learn skills with over 120k+</h5>
 						<p class=" text-[18px] leading-[1.67em] lg:text-[16px] md:text-[16px] sm:text-[16px] xsm:text-[16px] ">Video courses.</p>
 					</div>
