--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -29,7 +29,7 @@ import Footer from '@components/Footer.astro';
 		<div class="lg:w-5/6 xl:w-5/6 mb-20">
 			<div class="flex flex-col gap-8">
 				<a
-					href="/"
+					href="/post"
 					class="border-[#b1b2f4] group flex flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
 				>
 					<div class="w-full px-5 py-6 md:px-8 md:py-8">
@@ -63,7 +63,7 @@ import Footer from '@components/Footer.astro';
 					</div>
 				</a>
 				<a
-					href="/"
+					href="/post"
 					class="border-[#b1b2f4] flex group flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
 				>
 					<div class="w-full px-5 py-6 md:px-8 md:py-8">
@@ -97,7 +97,7 @@ import Footer from '@components/Footer.astro';
 					</div>
 				</a>
 				<a
-					href="/"
+					href="/post"
 					class="border-[#b1b2f4] flex group flex-col overflow-hidden rounded-xl border shadow shadow-[#e4e2e8] transition-shadow duration-300 md:flex-row md:items-center"
 				>
 					<div class="w-full px-5 py-6 md:px-8 md:py-8">
