--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -365,7 +365,7 @@ import Footer from '@components/Footer.astro';
 		</div> <!-- /.container -->
 	</div>
 
-	<div class="fancy-short-banner-thirteen py-[170px] lg:py-20 md:py-20 sm:py-20 xsm:py-20 bg-[#F6F9FB] wow fadeInUp">
+	<div id="quote" class="fancy-short-banner-thirteen py-[170px] lg:py-20 md:py-20 sm:py-20 xsm:py-20 bg-[#F6F9FB] wow fadeInUp">
 		<div class="container">
 			<div class="bg-wrapper z-[2] bg-white relative px-3 py-0 rounded-[10px]">
 				<div class="flex flex-wrap mx-[-12px]">
